# clinical-evidence-sufficiency-llm

./: .env.example  .gitignore  CITATION.cff  LICENSE-CC-BY-4.0.md  README.md  pyproject.toml  requirements.txt
analysis/: 00_data_audit.ipynb  01_generate_perturbations.ipynb  02_run_models.ipynb  03_score_outputs.ipynb  04_primary_analysis.ipynb  05_sensitivity_analyses.ipynb  06_figures_tables.ipynb  accuracy_tradeoff.py  analyze_adjudication.py  analyze_adjudication_final.py  analyze_common_panel.py  analyze_cost_controlled_panel.py  analyze_public_study.py  analyze_sensitivity.py  build_cost_controlled_panel_subset.py  build_disagreement_adjudication.py  build_doctor_packet.py  build_gonogo_plan.py  build_public_study_dataset.py  build_sensitivity_positive_set.py  cross_judge_robustness.py  diagnose_doctor_files.py  export_panel_clinician_review.py  generate_contradictions.py  gonogo_decision.py  judge_validation.py  paraphrase_analysis.py  power_simulation.py  qualitative_error_analysis.py  reanalysis_confounds.py  rigor_addons.py  run_openai_public_study.py  run_requested_model_panel.py  score_cost_controlled_panel_subset.py  stability_replicates.py
manuscript/: dataset_plan.md  decide_ai_checklist.md  ethics_self_assessment.md  manuscript.md  protocol.md  references.bib  reporting_checklist.md  stard_ai_checklist.md  supplementary_methods.md
outputs/: clinical_evidence_sufficiency_manuscript_with_figures.html  clinical_evidence_sufficiency_manuscript_with_visible_figures.md
prompts/: abstention_allowed_prompt.txt  confidence_prompt.txt  judge_prompt.txt  (+6 more)
(+82 files in other folders)
